--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   app:
     container_name: projFrontend
-    image: frontend:new
+    image: frontendver4:latest
     restart: always
     build: .
     ports:
